Footer Alignment fixed for small devices

--- a/src/App.css
+++ b/src/App.css
@@ -565,6 +565,8 @@
   font-size: 2.5rem;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   gap: 30px;
 }
 
